--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<div id="wrap">
             <div class="container">
 		<svg id="canvas"></svg>
-		<button onclick="regenerate()" id="regenerate-button" class="button button-primary button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-repeat"></i> Regenerate</button>
-		<button onclick="download()" id="download-button" class="button button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-image"></i> Download</button>
+		<!-- <button onclick="regenerate()" id="regenerate-button" class="button button-primary button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-repeat"></i> Regenerate</button>
+		     <button onclick="download()" id="download-button" class="button button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-image"></i> Download</button> -->
 	    </div>
 	</div>
 	<script type="text/javascript" src="js/svg_todataurl.js"></script>
