--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/temp.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/Buttons/2.0.0/css/buttons.min.css"> -->
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/chroma-js/1.2.1/chroma.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.6.0/js/md5.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.0/seedrandom.min.js"></script>
@@ -17,14 +16,13 @@
             <div class="container">
 		<svg id="canvas"></svg>
 		<button onclick="regenerate()" id="button" class="button button-primary button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-repeat"></i> Regenerate</button>
-		<!-- <button onclick="download()" id="download-button" class="button button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-image"></i> Download</button> -->
                 <h2>Generative Kandinsky</h2>
                 <p>Open-source algorithm by <a href="https://twitter.com/mstringer">@mstringer</a></p>
                 <p>Inspired by Wassily Kandinsky&#8217;s <span class="title">Circles in a Circle</span>, 1923</p>
 	    </div>
 	</div>
 	<script type="text/javascript" src="js/svg_todataurl.js"></script>
-	<script type="text/javascript" src="js/utils-temp.js"></script>
+	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
