mobile viewport stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=500, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<!-- <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/Buttons/2.0.0/css/buttons.min.css"> -->
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
@@ -17,7 +17,7 @@
 		<svg id="canvas"></svg>
 		<button onclick="regenerate()" id="button" class="button button-primary button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-repeat"></i> Regenerate</button>
                 <h2>Generative Kandinsky</h2>
-                <p>Open-source algorithm by <a href="https://twitter.com/mstringer">@mstringer</a></p>
+                <p>Open source algorithm by <a href="https://twitter.com/mstringer">@mstringer</a></p>
                 <p>Inspired by Wassily Kandinsky&#8217;s <span class="title">Circles in a Circle</span>, 1923</p>
 	    </div>
 	</div>
