mobile viewport stuff

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<svg id="canvas"></svg>
 		<button onclick="regenerate()" id="button" class="button button-primary button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-repeat"></i> Regenerate</button>
                 <h2>Generative Kandinsky</h2>
-                <p>Open source algorithm by <a href="https://twitter.com/mstringer">@mstringer</a></p>
+                <p>Open-source algorithm by <a href="https://twitter.com/mstringer">@mstringer</a></p>
                 <p>Inspired by Wassily Kandinsky&#8217;s <span class="title">Circles in a Circle</span>, 1923</p>
 	    </div>
 	</div>
