--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!-- <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/Buttons/2.0.0/css/buttons.min.css"> -->
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
         <script src="//cdn.jsdelivr.net/npm/verge@1.10.2/verge.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
@@ -16,7 +15,8 @@
 	<div id="wrap">
             <div class="container">
 		<svg id="canvas"></svg>
-		<button onclick="regenerate()" id="button" class="button button-primary button-uppercase button-plain button-border-thin button-inverse"><i class="fa fa-repeat"></i> Regenerate</button>
+		<button onclick="regenerate()" class="button"><i class="fa fa-repeat"></i> Regenerate</button>
+		<button onclick="download()" class="button"><i class="fa fa-repeat"></i> Download</button>
                 <h2>Generative Kandinsky</h2>
                 <p>Open-source algorithm by <a href="https://twitter.com/mstringer">@mstringer</a></p>
                 <p>Inspired by Wassily Kandinsky&#8217;s <span class="title">Circles in a Circle</span>, 1923</p>
