hidden text with headless

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 	<div id="wrap">
             <div class="container">
 		<svg id="canvas"></svg>
+		<div id="non-image">
 		<button onclick="regenerate()" class="button"><i class="fa fa-repeat"></i> Regenerate</button>
 		<button onclick="download()" class="button"><i class="fa fa-repeat"></i> Download</button>
                 <h2>Generative Kandinsky</h2>
                 <p>Open-source algorithm by <a href="https://twitter.com/mstringer">@mstringer</a></p>
                 <p>Inspired by Wassily Kandinsky&#8217;s <span class="title">Circles in a Circle</span>, 1923</p>
+		</div>
 	    </div>
 	</div>
 	<script type="text/javascript" src="js/svg_todataurl.js"></script>
